# PI-redes-sistemas-operativos-g1

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Logs  Makefile  README.md  TODO  TODO.md  configuration.json  database.bd  database.db  database.sqlite  usuarios.csv  usuarios.txt
WEB_UI/: app.js  form_solicitar_vacaciones.css  form_solicitar_vacaciones.html  formbuilder.js  index.css  index.html  modal.js  pagina_principal.html  solicitudes.html  style.css
WEB_UI/libs/: NumeroALetras.js
WEB_UI/pages/: index.html  login.html
WEB_UI/scripts/: scripts.js
WEB_UI/styles/: index.css
documentation/: user_manual.md
pages/: index.html  info_solicitud.html  log.html  login.html  not_found.html  solicitudes.html  verificar_constancia.html
pages/admin/: add_user.html  admin.html  edit_user.html  remove_user.html
pages/executive/: executive_queries.html
pages/supervisory/: add_annotation.html  supervisory_queries.html
public/scripts/: admin.js  app.js  buttonlistener.js  executive.js  formbuilder.js  log.js  login.js  modal.js  print_request.js  show_request.js  supervisory.js  verificar_constancia.js
public/styles/: admin.css  form_solicitar_vacaciones.css  styles.css  verificar_constancia.css
server/: REAMDE.md
server/http/: HttpConnHandler.cpp  HttpConnHandler.hpp  HttpResponse.hpp  HttpServer.cpp  HttpServer.hpp
server/network/: NetworkAddress.cpp  TcpServer.cpp  TcpServer.hpp
server/webapp/: DispatcherGoldbach.cpp  DispatcherGoldbach.hpp  GoldbachResults.cpp  GoldbachResults.hpp  NumInfo.cpp  NumInfo.hpp  Packer.cpp  Packer.hpp  SumGoldbachCalculator.cpp  SumGoldbachCalculator.hpp  SumGoldbachCalculatorTest.cpp  SumGoldbachWebApp.cpp  SumGoldbachWebApp.hpp  main.cpp
src/: authenticator.cpp  authenticator.hpp  configuration.cpp  configuration.hpp  error.hpp  fs.cpp  fs.hpp  hash.cpp  hash.hpp  main.cpp
src/app/: App.cpp  App.hpp  Database.hpp
src/common/: Log.cpp  Log.hpp  Util.cpp  Util.hpp  common.hpp
src/concurrent/: ThreadPool.cpp  ThreadPool.hpp
src/database/: Annotation.cpp  Annotation.hpp  Database.cpp  Database.hpp  DatabaseAPI.cpp  DatabaseAPI.hpp  DatabaseApp.cpp  DatabaseApp.hpp  DatabaseWebApp.cpp  DatabaseWebApp.hpp  HRRequest.cpp  HRRequest.hpp  (+5 more)
test/: configuration.json  configuration_db.json  configuration_fs.json  configuration_web.json  test.cpp
(+102 files in other folders)
